--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>My first Bulma website</title>
+    <title>Color Kittens</title>
     <link rel="stylesheet" href="css/main.css" />
+    <link rel="shortcut icon" type="image/svg+xml" href="img/favicon.svg" />
   </head>
   <body>
     <section class="hero is-medium is-dark">
